--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-An activity stream app for Sprint.ly. It is a webapp, but all storage
-is local, and it never communicates information to any site but Sprint.ly.
+An app for Sprint.ly. It is a webapp, but all storage
+is local, and it never communicates information with any site but Sprint.ly.
